<resources>
    <string name="app_name">Library T-06</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="go_back">Go back to Main Page</string>

    <string name="login_label">Login</string>
    <string name="askID">Enter ID</string>
    <string name="askPwd">Enter password</string>
    <string name="login">Login</string>

    <string name="online_label">Online User Account</string>
    <string name="ask_for_ID">Enter your ID</string>
    <string name="updated_addr">Enter new Address</string>
    <string name="updated_name">Enter new Name</string>
    <string name="updated_pwd">Enter new Password</string>
    <string name="update_online">Update Online Info</string>
    <string name="reserve_label">Reserve Media</string>
    <string name="reserve_media">Enter Media ID</string>
    <string name="reserve">Reserve</string>
    <string name="book_evt_label">Book an Event</string>
    <string name="book_evt_name">Enter Event Name</string>
    <string name="book_evt_date">Enter Event Date</string>
    <string name="book_evt_start">Enter Start Time</string>
    <string name="book_evt_end">Enter End Time</string>
    <string name="book_evt">Book Event</string>
    <string name="logout">Log Out</string>

    <string name="oh_label">Opening Hours</string>
    <string name="oh">View Opening Hours</string>
    <string name="to"> to </string>

    <string name="media_label">Media</string>
    <string name="media">View All Media</string>
    <string name="media_name">Title</string>
    <string name="media_id">Media ID</string>
    <string name="media_type">Media Type</string>
    <string name="media_check_status">Status</string>
    <string name="media_reserve_status">Reserved?</string>

    <string name="event_label">Events</string>
    <string name="event">View All Events</string>

    <string name="newpersonname_hint">EventName?</string>
    <string name="newpersondate_hint">EventDate?</string>
    <string name="newpersonstart_hint">EventStart?</string>
    <string name="newpersonend_hint">EventEnd?</string>
    <string name="newperson_button">Add Event</string>

    <string name="user_login_header">User Login</string>
    <string name="user_login_header_context">User Login Header</string>
    <string name="user_login_button">Log in</string>
    <string name="user_register_header">Register Online Account</string>
    <string name="user_register_id">ID Number</string>
    <string name="user_register_name">Name</string>
    <string name="user_register_address">Home Address</string>
    <string name="user_register_local">Local Account?</string>
    <string name="user_register_username">Username</string>
    <string name="user_register_email">Email Address</string>
    <string name="user_register_password">Password</string>
    <string name="user_register_button">Register</string>

    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_start">Start Time</string>
    <string name="event_end">End Time</string>

    <string name="dayOfWeek">Day of the Week</string>
    <string name="openingTime">Opening Time</string>
    <string name="closingTime">Closing Time</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="closed">Closed</string>

</resources>
