<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Online">

    <RelativeLayout
        android:id="@+id/content_ophour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        tools:context="ca.mcgill.ecse321.eventregistration_android.Login">
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:text="@string/online_label"
                android:textAllCaps="true"
                android:textSize="@dimen/title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/account_to_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ask_for_ID"/>
                <EditText
                    android:id="@+id/updated_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updated_addr"/>
                <EditText
                    android:id="@+id/updated_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updated_name"/>
                <EditText
                    android:id="@+id/updated_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updated_pwd"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/update_online"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200"
                    android:text="@string/reserve_label"
                    android:textAllCaps="true"
                    android:textSize="@dimen/title"/>
                <EditText
                    android:id="@+id/userID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ask_for_ID"/>
                <EditText
                    android:id="@+id/mediaID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reserve_media"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/reserve"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200"
                    android:text="@string/book_evt_label"
                    android:textAllCaps="true"
                    android:textSize="@dimen/title"/>
                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_evt_name"/>
                <EditText
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_evt_date"/>
                <EditText
                    android:id="@+id/event_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_evt_start"/>
                <EditText
                    android:id="@+id/event_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_evt_end"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="addEvent"
                    android:text="@string/book_evt" />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/logout"
                android:onClick="returnToMain"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>