<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="161dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/user_login_header_context"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/userLogin"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:text="@string/user_login_header"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_loginID"
        android:layout_width="247dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:ellipsize="middle"
            android:gravity="center_horizontal"
            android:hint="@string/askID"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_loginPwd"
        android:layout_width="247dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/askPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_loginID">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:ellipsize="middle"
            android:gravity="center_horizontal"
            android:hint="@string/askID"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="135dp"
        android:background="#FF9898"
        android:backgroundTint="#FF9191"
        android:foregroundTint="#FF8E8E"
        android:text="@string/user_login_button"
        app:iconTint="#DF7B7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_loginPwd"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>